Changelog
=========


1.0.2 - unreleased
------------------

- Add MANIFEST.in.
  [WouterVH]


1.0.1 - 2010-08-08
------------------

- Added objectValues and objectItems method to the ordered folder
  implementation, which use objectIds and thus the ordering information. In
  Zope 2.13 BTreeFolder2 was optimized to loop over the internal _tree data
  structure avoiding the objectIds indirection.
  [hannosch]


1.0 - 2010-07-18
----------------

- Avoid dangerous memoization in the DefaultOrdering adapter.
  [hannosch]

- Update license to GPL version 2 only.
  [hannosch]


1.0b5 - 2010-03-06
------------------

- Remove support for setting ``__parent__`` and ``__name__`` for content
  providing ``IContained`` as it can cause severe performance issues when
  used on Zope 2.x.
  [witsch]


1.0b4 - 2010-02-17
------------------

- Register all ordering adapter by default now that they can co-exist.
  [witsch]

- Add `__getitem__` support to the default ordering adapter to help
  previous/next support in `plone.app.folder`.
  [witsch]


1.0b3 - 2010-02-09
------------------

- Make sure order changes are persisted when using the partial ordering
  adapter.
  [hannosch, witsch]


1.0b2 - 2010-01-28
------------------

- Make the dependency on `Products.CMFCore` a soft one.
  [witsch]

- Added an 'unordered' adapter which can be used when no explicit ordering
  is needed.
  [davisagli]

- Allow the use of different named adapters to ``IOrdering``, with the name
  determined by the folder's ``_ordering`` attribute.
  [davisagli]


1.0b1 - 2009-10-10
------------------

- Fix the WebDAV content creation process by properly returning a
  ``NullResource`` when required.
  [optilude]


1.0a3 - 2009-05-11
------------------

- Let ``objectIds`` always return all object ids, even with partial ordering.
  [witsch]


1.0a2 - 2009-05-07
------------------

- Fix a bug in the default ordering that would cause the ``pos`` dict to get
  out of sync when an item is deleted.